# spark-character

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  spark.toml
evals/: cross_provider.py  evolve.py  evolve_persona.py  full_pulse.py  mutate_chip_demo.py
src/spark_character/: __init__.py  audit_miner.py  chip_context.py  chip_loader.py  memory_grounded.py  output_sanitizer.py  persona.py  pipeline.py  probes.py  provider.py  registry.py  search_adapter.py  trait_mutator.py  voice_judge.py
src/spark_character/artifacts/: persona.v2.md  persona.v5.md
src/spark_character/artifacts/overlays/: codex.md  minimax.md  zai.md
src/spark_character/artifacts/voice_corpus/: foil.v1.json  golden.v1.json
tests/: test_chip_loader.py  test_output_sanitizer.py  test_persona.py  test_provider_extract.py  test_trait_mutator.py
