[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-character"
version = "0.24.0"
description = "The voice and character of Spark agents. Provider-agnostic, evolvable through the self-evolving harness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "vibeforge1111" }]
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/vibeforge1111/spark-character"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spark_character = [
    "artifacts/*.md",
    "artifacts/*.txt",
    "artifacts/voice_corpus/*.json",
    "artifacts/overlays/*.md",
    "artifacts/overlays/surface/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
